--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/05_TailwindCss/package.json
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/05_TailwindCss/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "install": "npm i tailwindcss",
+    "call": "npx tailwindcss init",
+    "build": "npx tailwindcss build src/tailwind.css -o css/styles.css"
   },
   "keywords": [],
   "author": "",
