--- a/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/05_TailwindCss/package.json
+++ b/2 JavaScript Algorithms and Data Structures/3 Advanced JavaScript/05_TailwindCss/package.json
@@ -6,12 +6,15 @@
   "scripts": {
     "install": "npm i tailwindcss",
     "call": "npx tailwindcss init",
-    "build": "npx tailwindcss build src/tailwind.css -o css/styles.css"
+    "build": "npx tailwindcss build src/tailwind.css -o css/styles.css",
+    "env": "npm i win-node-env",
+    "production": "NODE_ENV=production postcss .src/tailwind.css -o css/styles.css"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "win-node-env": "^0.6.1"
   }
 }
