--- a/3 Front End Development Libraries/02_react/02_libs-css/package.json
+++ b/3 Front End Development Libraries/02_react/02_libs-css/package.json
@@ -9,6 +9,8 @@
   ],
   "scripts": {
     "dev": "gatsby develop",
+    "cdev": "gatsby clean && gatsby develop",
+    "cbuild": "gatsby clean && gatsby build",
     "start": "gatsby develop",
     "build": "gatsby build",
     "serve": "gatsby serve",
@@ -16,8 +18,14 @@
     "boots": "docs-serve"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.14.3",
+    "@mui/material": "^5.14.5",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
+    "bulma": "^0.9.4",
     "gatsby": "^5.11.0",
     "gatsby-plugin-provide-react": "^1.0.2",
     "gatsby-plugin-sass": "^6.11.0",
