create custom helper for ajax requests

--- a/3 Front End Development Libraries/02_react/02_libs-css/package.json
+++ b/3 Front End Development Libraries/02_react/02_libs-css/package.json
@@ -15,7 +15,8 @@
     "build": "gatsby build",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "boots": "docs-serve"
+    "boots": "docs-serve",
+    "japi": "json-server --watch src/ejercicios/tarea_2/api/db.json --port 8001"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
