--- a/3 Front End Development Libraries/02_react/00_install/my-next-app/package.json
+++ b/3 Front End Development Libraries/02_react/00_install/my-next-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-next-app",
+  "name": "mynextapp",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,11 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "10.4.14",
-    "next": "13.4.12",
-    "postcss": "8.4.27",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3"
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.29",
+    "tailwindcss": "^3.3.3"
   }
 }
