--- a/3 Front End Development Libraries/02_react/08_react-reducers/package.json
+++ b/3 Front End Development Libraries/02_react/08_react-reducers/package.json
@@ -11,6 +11,7 @@
     "api": "json-server --watch src/crud/api/db.json --port 5000"
   },
   "dependencies": {
+    "json-server": "^0.17.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
