--- a/5 Back End Development and APIs/03_mongoose/package.json
+++ b/5 Back End Development and APIs/03_mongoose/package.json
@@ -1,12 +1,10 @@
 {
   "name": "03_mongoose",
   "version": "1.0.0",
-  "description": "",
+  "description": "> Crear `package.json`",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/index.ts",
-    "build": "npx tsc",
-    "start": "node ./dist/index.js"
+    "dev": "nodemon src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,7 +24,6 @@
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.12.7",
-    "nodemon": "^3.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   }
